# sudoku-solver

./: .gitignore  LICENSE  README.md  eval.py  main.py  model.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py  utils.py
examples/: crop_sudoku.py  extract_sudoku_from_image.py  main.py  solve_sudoku.py
examples/data/: digits.txt
src/: extractor.py  utils.py
src/visual_sudoku_solver/: solver.py
tests/: test_solver.py
visual_sudoku_solver/: extractor.py  solver.py
