[project]
name = "sudoku-solver"
version = "0.1.0"
description = "Detect a sudoku grid in an image and solve it"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0.84",
    "torch>=2.5.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
