[metadata]
name = visual-sudoku-solver
version = 0.0.1
description = Solves a sudoku in an image
author = Florian Trautweiler
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    visual_sudoku_solver
package_dir =
    =src
install_requires =
    opencv-python>=4.5.4.58
    numpy>=1.21.4
    pytesseract>=0.3.8
python_requires =
    >=3.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0